# causal-lab-aif

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTENTS.md  LICENSE  Makefile  NAMING.md  README.md  index.html  mkdocs.yml  poetry.toml  pyproject.toml  versions.json
.github/: pull_request_template.md
causal_lab_aif/: __init__.py
docs/: index.md
notebooks/: 0-selection-on-observables.ipynb  1-lalonde-experimental.ipynb  2-lalonde-observational-match.ipynb  3-lalonde-observational-ipw.ipynb  doe_ejemplos.ipynb  mahalanobis-match.pkl
requirements/: common.txt  dev.txt  doc.txt  doe.txt
search/: search_index.json
slides/latex/: linear-regression.tex
tests/: __init__.py  conftest.py
v0.1.0/: 404.html  index.html
v0.1.0/print_page/: index.html
v0.1.0/search/: search_index.json
v0.1.0/stylesheets/: extra.css
